force-app/main/default/objects/ContentVersion/fields/TW1_IsNF__c.field-meta.xml
<CustomField>
    <fullName>TW1_IsNF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNF</label>
    <type>Checkbox</type>
</CustomField>