force-app/main/default/objects/ContentVersion/fields/TW1_Last_SAP_request__c.field-meta.xml
<CustomField>
    <fullName>TW1_Last_SAP_request__c</fullName>
    <description>DateTime field, filled when salesforce send files to SAP.</description>
    <label>Last SAP request</label>
    <type>DateTime</type>
</CustomField>