force-app/main/default/objects/ContentVersion/fields/TW1_Last_SAP_response__c.field-meta.xml
<CustomField>
    <fullName>TW1_Last_SAP_response__c</fullName>
    <description>Datetime field, updated when salesforce receives SAP callback of files.</description>
    <label>Last SAP response</label>
    <type>DateTime</type>
</CustomField>