force-app/main/default/objects/ContentVersion/fields/TW1_Upload_Sucess_SAP__c.field-meta.xml
<CustomField>
    <fullName>TW1_Upload_Sucess_SAP__c</fullName>
    <description>Datetime filled, updated when SAP returns via callback from files and response == sucess</description>
    <label>Upload Sucess SAP</label>
    <type>DateTime</type>
</CustomField>